tests/original_tests/make_output.txt
[  0%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/calmar.cpp.o
[  0%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/annualreturn.cpp.o
[  0%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzer.cpp.o
[  1%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/drawdown.cpp.o
[  1%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/logreturnsrolling.cpp.o
[  1%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/periodstats.cpp.o
[  1%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp.o
[  2%] Building CXX object CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/positions.cpp.o
In file included from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/periodstats.cpp:1:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/periodstats.h:4:10: fatal error: ../timeframe.h: No such file or directory
    4 | #include "../timeframe.h"
      |          ^~~~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/backtrader_complete.dir/build.make:160: CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/periodstats.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzer.cpp:13:10: fatal error: calendar.h: No such file or directory
   13 | #include <calendar.h>
      |          ^~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/backtrader_complete.dir/build.make:76: CMakeFiles/backtrader_complete.dir/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzer.cpp.o] Error 1
In file included from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:3,
                 from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/logreturnsrolling.cpp:1:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::timeframe’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:176:36: note: defined here
  176 |         TimeFrame::Value timeframe = TimeFrame::NoTimeFrame;
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::compression’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:177:25: note: defined here
  177 |         int compression = 1;
      |                         ^~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::_doprenext’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:178:25: note: defined here
  178 |         bool _doprenext = true;
      |                         ^~~~~~~
In file included from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:3,
                 from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:1:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::timeframe’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:176:36: note: defined here
  176 |         TimeFrame::Value timeframe = TimeFrame::NoTimeFrame;
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::compression’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:177:25: note: defined here
  177 |         int compression = 1;
      |                         ^~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::_doprenext’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:178:25: note: defined here
  178 |         bool _doprenext = true;
      |                         ^~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:30:20: error: ‘backtrader::AnalysisResult backtrader::analyzers::Leverage::get_analysis()’ marked ‘override’, but does not override
   30 |     AnalysisResult get_analysis() override;
      |                    ^~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:139:28: warning: ‘virtual backtrader::AnalysisResult backtrader::Analyzer::get_analysis() const’ was hidden [-Woverloaded-virtual=]
  139 |     virtual AnalysisResult get_analysis() const;
      |                            ^~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:30:20: note:   by ‘backtrader::AnalysisResult backtrader::analyzers::Leverage::get_analysis()’
   30 |     AnalysisResult get_analysis() override;
      |                    ^~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:23:44: error: default member initializer for ‘backtrader::analyzers::Leverage::Params::fund’ required before the end of its enclosing class
   23 |     Leverage(const Params& params = Params{});
      |                                            ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:20:19: note: defined here
   20 |         bool fund = false;  // Fund mode calculation
      |                   ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:46:53: error: default member initializer for ‘backtrader::analyzers::LogReturnsRolling::Params::data’ required before the end of its enclosing class
   46 |     LogReturnsRolling(const Params& params = Params{});
      |                                                     ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:41:42: note: defined here
   41 |         std::shared_ptr<DataSeries> data = nullptr;  // Reference asset to track
      |                                          ^~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:46:53: error: default member initializer for ‘backtrader::analyzers::LogReturnsRolling::Params::firstopen’ required before the end of its enclosing class
   46 |     LogReturnsRolling(const Params& params = Params{});
      |                                                     ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:42:24: note: defined here
   42 |         bool firstopen = true;                       // Use opening price for first calculation
      |                        ^~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:46:53: error: default member initializer for ‘backtrader::analyzers::LogReturnsRolling::Params::fund’ required before the end of its enclosing class
   46 |     LogReturnsRolling(const Params& params = Params{});
      |                                                     ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:43:42: note: defined here
   43 |         std::shared_ptr<DataSeries> fund = nullptr;  // Fund mode behavior
      |                                          ^~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:256:37: error: qualified name does not name a class before ‘{’ token
  256 |         struct ClassName##Registrar { \
      |                                     ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:131:1: note: in expansion of macro ‘REGISTER_ANALYZER’
  131 | REGISTER_ANALYZER(backtrader::analyzers::LogReturnsRolling);
      | ^~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/logreturnsrolling.h:131:42: error: ‘LogReturnsRollingRegistrar’ in namespace ‘backtrader::analyzers’ does not name a type; did you mean ‘LogReturnsRolling’?
  131 | REGISTER_ANALYZER(backtrader::analyzers::LogReturnsRolling);
      |                                          ^~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:270:16: note: in definition of macro ‘REGISTER_ANALYZER’
  270 |         static ClassName##Registrar global_##ClassName##_registrar; \
      |                ^~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: In constructor ‘backtrader::analyzers::Leverage::Leverage(const Params&)’:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:8:44: error: class ‘backtrader::analyzers::Leverage’ does not have any field named ‘p’
    8 | Leverage::Leverage(const Params& params) : p(params) {
      |                                            ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:10:5: error: ‘trade_leverage_’ was not declared in this scope; did you mean ‘max_leverage_’?
   10 |     trade_leverage_.clear();
      |     ^~~~~~~~~~~~~~~
      |     max_leverage_
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: In member function ‘virtual void backtrader::analyzers::Leverage::start()’:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:16:5: error: ‘trade_leverage_’ was not declared in this scope; did you mean ‘max_leverage_’?
   16 |     trade_leverage_.clear();
      |     ^~~~~~~~~~~~~~~
      |     max_leverage_
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: In member function ‘virtual void backtrader::analyzers::Leverage::stop()’:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:21:5: error: ‘calculate_final_stats’ was not declared in this scope
   21 |     calculate_final_stats();
      |     ^~~~~~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: At global scope:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:24:6: error: no declaration matches ‘void backtrader::analyzers::Leverage::prenext()’
   24 | void Leverage::prenext() {
      |      ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:24:6: note: no functions named ‘void backtrader::analyzers::Leverage::prenext()’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: In member function ‘virtual void backtrader::analyzers::Leverage::next()’:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:30:10: error: ‘broker_’ was not declared in this scope; did you mean ‘Broker’?
   30 |     if (!broker_) {
      |          ^~~~~~~
      |          Broker
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:35:30: error: ‘broker_’ was not declared in this scope; did you mean ‘Broker’?
   35 |     double portfolio_value = broker_->get_value();
      |                              ^~~~~~~
      |                              Broker
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:54:5: error: ‘LeverageData’ was not declared in this scope; did you mean ‘Leverage’?
   54 |     LeverageData data;
      |     ^~~~~~~~~~~~
      |     Leverage
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:55:10: error: ‘class std::shared_ptr<backtrader::DataSeries>’ has no member named ‘portfolio_value’
   55 |     data.portfolio_value = portfolio_value;
      |          ^~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:56:10: error: ‘class std::shared_ptr<backtrader::DataSeries>’ has no member named ‘position_value’
   56 |     data.position_value = total_position_value;
      |          ^~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:57:10: error: ‘class std::shared_ptr<backtrader::DataSeries>’ has no member named ‘cash’
   57 |     data.cash = cash;
      |          ^~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:58:10: error: ‘class std::shared_ptr<backtrader::DataSeries>’ has no member named ‘leverage’
   58 |     data.leverage = current_leverage;
      |          ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:59:10: error: ‘class std::shared_ptr<backtrader::DataSeries>’ has no member named ‘timestamp’
   59 |     data.timestamp = std::chrono::system_clock::now();
      |          ^~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:61:32: error: no matching function for call to ‘std::vector<double>::push_back(std::shared_ptr<backtrader::DataSeries>&)’
   61 |     leverage_history_.push_back(data);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../metabase.h:3,
                 from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/../analyzer.h:3:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘constexpr void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = double; _Alloc = std::allocator<double>; value_type = double]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘std::shared_ptr<backtrader::DataSeries>’ to ‘const std::vector<double>::value_type&’ {aka ‘const double&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘constexpr void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = double; _Alloc = std::allocator<double>; value_type = double]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘std::shared_ptr<backtrader::DataSeries>’ to ‘std::vector<double>::value_type&&’ {aka ‘double&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: At global scope:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:64:6: error: no declaration matches ‘void backtrader::analyzers::Leverage::notify_trade(const backtrader::Trade&)’
   64 | void Leverage::notify_trade(const Trade& trade) {
      |      ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:64:6: note: no functions named ‘void backtrader::analyzers::Leverage::notify_trade(const backtrader::Trade&)’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:83:33: error: no declaration matches ‘std::map<std::__cxx11::basic_string<char>, std::any> backtrader::analyzers::Leverage::get_analysis()’
   83 | std::map<std::string, std::any> Leverage::get_analysis() {
      |                                 ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:30:20: note: candidate is: ‘backtrader::AnalysisResult backtrader::analyzers::Leverage::get_analysis()’
   30 |     AnalysisResult get_analysis() override;
      |                    ^~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:115:6: error: no declaration matches ‘void backtrader::analyzers::Leverage::calculate_final_stats()’
  115 | void Leverage::calculate_final_stats() {
      |      ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:115:6: note: no functions named ‘void backtrader::analyzers::Leverage::calculate_final_stats()’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:171:8: error: no declaration matches ‘double backtrader::analyzers::Leverage::calculate_leverage_risk_score() const’
  171 | double Leverage::calculate_leverage_risk_score() const {
      |        ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:171:8: note: no functions named ‘double backtrader::analyzers::Leverage::calculate_leverage_risk_score() const’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: In member function ‘double backtrader::analyzers::Leverage::get_current_leverage() const’:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:203:41: error: request for member ‘leverage’ in ‘((const backtrader::analyzers::Leverage*)this)->backtrader::analyzers::Leverage::leverage_history_.std::vector<double>::back()’, which is of non-class type ‘const __gnu_cxx::__alloc_traits<std::allocator<double>, double>::value_type’ {aka ‘const double’}
  203 |         return leverage_history_.back().leverage;
      |                                         ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp: At global scope:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:212:8: error: no declaration matches ‘double backtrader::analyzers::Leverage::get_avg_leverage() const’
  212 | double Leverage::get_avg_leverage() const {
      |        ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:212:8: note: no functions named ‘double backtrader::analyzers::Leverage::get_avg_leverage() const’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:216:23: error: ‘LeverageData’ is not a member of ‘backtrader::analyzers::Leverage’
  216 | std::vector<Leverage::LeverageData> Leverage::get_leverage_history() const {
      |                       ^~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:216:35: error: template argument 1 is invalid
  216 | std::vector<Leverage::LeverageData> Leverage::get_leverage_history() const {
      |                                   ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:216:35: error: template argument 2 is invalid
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:216:37: error: no declaration matches ‘int backtrader::analyzers::Leverage::get_leverage_history() const’
  216 | std::vector<Leverage::LeverageData> Leverage::get_leverage_history() const {
      |                                     ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:39:32: note: candidate is: ‘const std::vector<double>& backtrader::analyzers::Leverage::get_leverage_history() const’
   39 |     const std::vector<double>& get_leverage_history() const;
      |                                ^~~~~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:220:23: error: ‘TradeLeverage’ is not a member of ‘backtrader::analyzers::Leverage’
  220 | std::vector<Leverage::TradeLeverage> Leverage::get_trade_leverage() const {
      |                       ^~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:220:36: error: template argument 1 is invalid
  220 | std::vector<Leverage::TradeLeverage> Leverage::get_trade_leverage() const {
      |                                    ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:220:36: error: template argument 2 is invalid
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:220:38: error: no declaration matches ‘int backtrader::analyzers::Leverage::get_trade_leverage() const’
  220 | std::vector<Leverage::TradeLeverage> Leverage::get_trade_leverage() const {
      |                                      ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:220:38: note: no functions named ‘int backtrader::analyzers::Leverage::get_trade_leverage() const’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:224:21: error: no declaration matches ‘std::vector<double> backtrader::analyzers::Leverage::get_leverage_values() const’
  224 | std::vector<double> Leverage::get_leverage_values() const {
      |                     ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:224:21: note: no functions named ‘std::vector<double> backtrader::analyzers::Leverage::get_leverage_values() const’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:235:11: error: ‘LeverageData’ in ‘class backtrader::analyzers::Leverage’ does not name a type
  235 | Leverage::LeverageData Leverage::get_max_leverage_point() const {
      |           ^~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:248:8: error: no declaration matches ‘double backtrader::analyzers::Leverage::get_leverage_volatility() const’
  248 | double Leverage::get_leverage_volatility() const {
      |        ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:248:8: note: no functions named ‘double backtrader::analyzers::Leverage::get_leverage_volatility() const’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:252:31: error: no declaration matches ‘std::map<std::__cxx11::basic_string<char>, double> backtrader::analyzers::Leverage::get_leverage_distribution() const’
  252 | std::map<std::string, double> Leverage::get_leverage_distribution() const {
      |                               ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:252:31: note: no functions named ‘std::map<std::__cxx11::basic_string<char>, double> backtrader::analyzers::Leverage::get_leverage_distribution() const’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:291:6: error: no declaration matches ‘void backtrader::analyzers::Leverage::set_broker(std::shared_ptr<backtrader::Broker>)’
  291 | void Leverage::set_broker(std::shared_ptr<Broker> broker) {
      |      ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/leverage.cpp:291:6: note: no functions named ‘void backtrader::analyzers::Leverage::set_broker(std::shared_ptr<backtrader::Broker>)’
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/../../include/analyzers/leverage.h:16:7: note: ‘class backtrader::analyzers::Leverage’ defined here
   16 | class Leverage : public Analyzer {
      |       ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/logreturnsrolling.cpp: In constructor ‘backtrader::analyzers::LogReturnsRolling::LogReturnsRolling(const Params&)’:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/logreturnsrolling.cpp:26:10: error: ‘class backtrader::OrderedDict<std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >, double>’ has no member named ‘clear’
   26 |     rets.clear();
      |          ^~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/logreturnsrolling.cpp: In member function ‘virtual void backtrader::analyzers::LogReturnsRolling::start()’:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/logreturnsrolling.cpp:43:10: error: ‘class backtrader::OrderedDict<std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >, double>’ has no member named ‘clear’
   43 |     rets.clear();
      |          ^~~~~
In file included from /home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/calmar.h:3,
                 from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/calmar.cpp:1:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::timeframe’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:176:36: note: defined here
  176 |         TimeFrame::Value timeframe = TimeFrame::NoTimeFrame;
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::compression’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:177:25: note: defined here
  177 |         int compression = 1;
      |                         ^~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::_doprenext’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:178:25: note: defined here
  178 |         bool _doprenext = true;
      |                         ^~~~~~~
In file included from /home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/calmar.h:4:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:37:44: error: default member initializer for ‘backtrader::analyzers::DrawDown::Params::fund’ required before the end of its enclosing class
   37 |     DrawDown(const Params& params = Params{});
      |                                            ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:33:19: note: defined here
   33 |         bool fund = false;      // Use fund mode
      |                   ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:37:44: error: default member initializer for ‘backtrader::analyzers::DrawDown::Params::auto_fund’ required before the end of its enclosing class
   37 |     DrawDown(const Params& params = Params{});
      |                                            ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:34:24: note: defined here
   34 |         bool auto_fund = true;  // Auto-detect fund mode from broker
      |                        ^~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:94:48: error: default member initializer for ‘backtrader::analyzers::TimeDrawDown::Params::fund’ required before the end of its enclosing class
   94 |     TimeDrawDown(const Params& params = Params{});
      |                                                ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:90:19: note: defined here
   90 |         bool fund = false;      // Use fund mode
      |                   ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:94:48: error: default member initializer for ‘backtrader::analyzers::TimeDrawDown::Params::auto_fund’ required before the end of its enclosing class
   94 |     TimeDrawDown(const Params& params = Params{});
      |                                                ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:91:24: note: defined here
   91 |         bool auto_fund = true;  // Auto-detect fund mode from broker
      |                        ^~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:256:37: error: qualified name does not name a class before ‘{’ token
  256 |         struct ClassName##Registrar { \
      |                                     ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:125:1: note: in expansion of macro ‘REGISTER_ANALYZER’
  125 | REGISTER_ANALYZER(backtrader::analyzers::DrawDown);
      | ^~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:125:42: error: ‘DrawDownRegistrar’ in namespace ‘backtrader::analyzers’ does not name a type
  125 | REGISTER_ANALYZER(backtrader::analyzers::DrawDown);
      |                                          ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:270:16: note: in definition of macro ‘REGISTER_ANALYZER’
  270 |         static ClassName##Registrar global_##ClassName##_registrar; \
      |                ^~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:256:37: error: qualified name does not name a class before ‘{’ token
  256 |         struct ClassName##Registrar { \
      |                                     ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:126:1: note: in expansion of macro ‘REGISTER_ANALYZER’
  126 | REGISTER_ANALYZER(backtrader::analyzers::TimeDrawDown);
      | ^~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:126:42: error: ‘TimeDrawDownRegistrar’ in namespace ‘backtrader::analyzers’ does not name a type
  126 | REGISTER_ANALYZER(backtrader::analyzers::TimeDrawDown);
      |                                          ^~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:270:16: note: in definition of macro ‘REGISTER_ANALYZER’
  270 |         static ClassName##Registrar global_##ClassName##_registrar; \
      |                ^~~~~~~~~
In file included from /home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:3,
                 from /home/yun/Documents/refactor_backtrader/backtrader_cpp/src/analyzers/drawdown.cpp:1:
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::timeframe’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:176:36: note: defined here
  176 |         TimeFrame::Value timeframe = TimeFrame::NoTimeFrame;
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::compression’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:177:25: note: defined here
  177 |         int compression = 1;
      |                         ^~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:181:57: error: default member initializer for ‘backtrader::TimeFrameAnalyzerBase::Params::_doprenext’ required before the end of its enclosing class
  181 |     TimeFrameAnalyzerBase(const Params& params = Params{});
      |                                                         ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:178:25: note: defined here
  178 |         bool _doprenext = true;
      |                         ^~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:37:44: error: default member initializer for ‘backtrader::analyzers::DrawDown::Params::fund’ required before the end of its enclosing class
   37 |     DrawDown(const Params& params = Params{});
      |                                            ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:33:19: note: defined here
   33 |         bool fund = false;      // Use fund mode
      |                   ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:37:44: error: default member initializer for ‘backtrader::analyzers::DrawDown::Params::auto_fund’ required before the end of its enclosing class
   37 |     DrawDown(const Params& params = Params{});
      |                                            ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:34:24: note: defined here
   34 |         bool auto_fund = true;  // Auto-detect fund mode from broker
      |                        ^~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:94:48: error: default member initializer for ‘backtrader::analyzers::TimeDrawDown::Params::fund’ required before the end of its enclosing class
   94 |     TimeDrawDown(const Params& params = Params{});
      |                                                ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:90:19: note: defined here
   90 |         bool fund = false;      // Use fund mode
      |                   ^~~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:94:48: error: default member initializer for ‘backtrader::analyzers::TimeDrawDown::Params::auto_fund’ required before the end of its enclosing class
   94 |     TimeDrawDown(const Params& params = Params{});
      |                                                ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:91:24: note: defined here
   91 |         bool auto_fund = true;  // Auto-detect fund mode from broker
      |                        ^~~~~~~
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/../analyzer.h:256:37: error: qualified name does not name a class before ‘{’ token
  256 |         struct ClassName##Registrar { \
      |                                     ^
/home/yun/Documents/refactor_backtrader/backtrader_cpp/tests/original_tests/../../include/analyzers/drawdown.h:125:1: note: in expansion of macro ‘REGISTER_ANALYZER’
  125 | REGISTER_ANALYZER(backtrader::analyzers::DrawDown);
      | ^~~~~~~~~~~~~~~~~
